Cambios a index y se eliminarion archivos cont.php prueba.txt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Yards Sales</title>
+    <title>Muebles</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="enbezado__logo col-5 col-md-2 px-2 px-md-4">
                     <a href="/">
-                        <img src="assets/img/logo.png" width="100%" alt="Yard Sales">
+                        <img src="assets/img/logo.png" width="100%" alt="muebles">
                     </a>
                 </div>
                 <div class="encabezado__menu col-6 col-md-5">
