se agregaron unicamente comentarios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <main>
         <section class="slide-container">
-
+            
+        <!-- esta seccion le toca a Luis  -->
 
         </section>
         <section class="catalog-section">
