Se agrego doc tex *CID*

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       <div class="swiper-slide" role="group" aria-label="4 / 9" style="width: 1366px; margin-right: 350px;">
                         <div class="dj-banner">
                             <div class="dj-bg">
-                                <img src="assets/img/banner_ej(4).png alt="" height="auto">
+                                <img src="assets/img/banner_ej(4).png" height="auto">
                                 <div class="dj-text" style="top: 188px;">
                                     <p style="color: black; width: 45%;">Somos líderes del mercado de Muebles</span></p>
                                 </div>
