--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
 <body>
 
   <header>
-    <nav>
-    <ul class="menu-side">
-      <li><a href="index.html">INICIO</a></li>
-      <li><a href="contacto.html">CONTACTO</a></li>
-      <li><a href="#">PRODUCTOS</a></li>
-      <li><a href="#">NOSOTROS</a></li>
-        
-      <li class="imagen-cont"><a href="index.html"><img src="assets/img/icon-1.png" alt=""></a></li>
-   
-    </ul>
-  </nav>
-
+    
+     <img class="logo" src="assets/img/icon-1.png" alt="logo">
+      <nav>
+           <ul class="nav-links">
+             <li><a href="index.html">  Inicio</a></li>
+             <li><a href="#"> Productos </a></li>
+             <li><a href="#">  Nosotros</a></li>
+             <li><a href="contacto.html">  Contacto</a></li>
+           </ul>
+      </nav>
   </header>
 
 
