--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="swiper-wrapper" id="swiper-wrapper-3a5e8f8a44f67439" aria-live="off"
               style="transition-duration: 1000ms; transform: translate3d(-6980px, 0px, 0px);">
               <div class="swiper-slide" role="group" aria-label="1 / 9" style="width: 100%; margin-right: 1px;">
-                <img src="assets/img/Design-4.png" alt="pd101" height="500px">
+                <img src="assets/img/Des-1.jpg" alt="pd101" height="500px">
                 <div class="bantxt">
                   <h3>Muebles en optimas<br><span>condiciones</span></h3>
                   <a href="promociones.html"><button>Promociones</button></a>
@@ -46,7 +46,7 @@
 
               </div>
               <div class="swiper-slide" role="group" aria-label="2 / 9" style="width: 1366px; margin-right: 0px;">
-                <img src="assets/img/Design-4.png" alt="pd101" height="500px">
+                <img src="assets/img/Des-11.jpg" alt="pd101" height="500px">
                 <div class="bantxt">
                   <h3>Amosca que muebles tan chidos</h3>
                 </div>
@@ -94,12 +94,6 @@
                 tabindex="0" role="button" aria-label="Go to slide 9"></span></div>
             <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
           </div>
-        </div>
-        <div class="social-bar">
-          <a href="https://www.facebook.com/Muebles" class="icon icon-facebook2" target="blank"><img
-              style="width: 50px;" src="https://img.icons8.com/color/48/000000/facebook.png" /></a>
-          <a href="https://www.instagram.com/Muebles" class="icon icon-instagram" target="blank"><img
-              style="width: 50px;" src="https://img.icons8.com/fluency/96/000000/instagram-new.png" /></a>
         </div>
 
 
