--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <nav>
            <ul class="nav-links">
              <li><a href="index.html">  Inicio</a></li>
-             <li><a href="#"> Productos </a></li>
-             <li><a href="#">  Nosotros</a></li>
+             <li><a href=""> Productos </a></li>
+             <li><a href="">  Nosotros</a></li>
              <li><a href="contacto.html">  Contacto</a></li>
            </ul>
       </nav>
