se hicieron cambion en el catalog-section ademas de cambiar la barra de menu -JAZ

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header>
 
-    <img class="logo" src="assets/img/icon-1.png" alt="logo">
+    <img class="logo" src="assets/img/logos/logo-p-w.png" alt="logo">
     <nav>
       <ul class="nav-links">
         <li><a href="index.html"> Inicio</a></li>
@@ -98,12 +98,12 @@
       </div>
 
     </section>
+
     <section class="catalog-section">
       <section>
         <div class="contenedor">
           <div class="contenedor-conciertos">
-            <h2 class="titulo">Catalogo</h2>
-            <hr><br>
+        
             <div class="card" style="background-image: url('./assets/img/Des-1.jpg')">
               <div class="textos">
                 <h3 style="visibility: hidden;">Mueble armable</h3>
@@ -153,22 +153,14 @@
                 <p style="visibility: hidden;">Los mejores muebles</p>
               </div>
             </div>
-            <div class="card" style="background-image: url('./assets/img/Des-18.jpg')">
-              <div class="textos">
-                <h3 style="visibility: hidden;">Mueble armable</h3>
-                <p style="visibility: hidden;">Los mejores muebles</p>
-              </div>
-            </div>
+           
           </div>
 
           <div class="backlife">
             <br>
             <h3>Muebles Life</h3>
             <ul>
-              <li>Muebles para tu hogar</li>
-              <hr>
-              <li>Compra <span style="color: blue;">YA</span> los mejores muebles</li>
-              <hr>
+
               <li><span style="color: rgb(0, 0, 0); font-size: 30px;">Al mejor precio</span></li>
               <hr>
               <br><br><br>
@@ -178,6 +170,7 @@
         </div>
       </section>
     </section>
+
 
     <section class="first-product">
       <img src="./assets/img/Des-5.jpg">
